devops-microservices/k8s/front-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-deployment
  template:
    metadata:
      labels:
        app: front-deployment
    spec:
      containers:
      - name: front-1
        image: ateshgaikwad/front-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
