devops-microservices/k8s/order-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  labels:
    app: order-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-deployment
  template:
    metadata:
      labels:
        app: order-deployment
    spec:
      containers:
      - name: order-1
        image: ateshgaikwad/order-service:v3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
