devops-microservices/k8s/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
