devops-microservices/k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
